--- a/index.html
+++ b/index.html
@@ -90,6 +90,8 @@
             </p>
         </div>
     </aside>
+
+    <! -- Footer -- >
     <footer class="footer">
         <h2>Made with ❤️️ by Horiseon</h2>
         <p>
