update Readme and restore css

--- a/index.html
+++ b/index.html
@@ -66,6 +66,8 @@
             </p>
         </section>
     </main>
+
+    <! -- Benifits -- >
     
     <aside class="benefits">
         <div class="benefit-lead">
